# Energy_Forecasting

./: final_rejig.ipynb  pyproject.toml  results.ods
data/: aemo_nsw_target_only.csv  gefcom_2012_zone_1_load.csv  get_dispatch_region_sum.txt  matlab_electricity_target_only.xlsx  stocks.csv
src/bayes_opt/: main.py
src/bayes_opt/bayes_opt_scripts/: basic_nn.py  cnn.py  datacleaner.py  lstm.py  performance_analysis.py  rf_model.py  simple_regression.py  ui_datafinder.py  xgboost_model.py
src/bayes_opt/pages/: seminar_presenter.py  ui.py
src/genetic_algorithm/: app.py  main.py  metrics.csv  predictions.csv
src/genetic_algorithm/genetic_algorithm_scripts/: analysis.py  constants.py  datacleaner.py  generation_and_evolution.py  read_write_functions.py
src/notebooks/: aemo_load_collector.py  testing.ipynb  testing_2.ipynb
src/tests/genetic_algorithm_tests/: test_analysis.py  test_generation_and_evolution.py  test_read_write_functions.py
