[tool.poetry]
name = "energy-forecasting"
version = "0.1.0"
description = "Thesis project to create a time series prediction model"
authors = ["David Gaul <gauldavid78259@gmail.com>"]
readme = "README.md"
packages = [{include = "genetic_algorithm", from = "src"}, {include = "bayes_opt", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "^2.13.0"
tpot = "^0.12.0"
dash = "^2.11.1"
matplotlib = "^3.7.2"
scikit-optimize = "^0.9.0"
keras-tuner = "^1.3.5"
statsmodels = "^0.14.0"
regex = "^2023.6.3"
openpyxl = "^3.1.2"
pytest = "^7.4.0"
joblib = "^1.3.1"
numpy = "1.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
